<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/columbia_university_only_logo"
            android:contentDescription="@string/columbia_logo"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="225dp"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/columbia_text"
            android:contentDescription="@string/columbia_logo"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_margin="20dp">

            // Clickable news icon
            <LinearLayout
                android:id="@+id/news_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/newspaper"
                    android:contentDescription="@string/news_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_icon"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/events_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendar"
                    android:contentDescription="@string/events_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events_icon"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/course_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/notebook"
                    android:contentDescription="@string/course_catalog"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_catalog"
                    android:maxWidth="80dp"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/dining_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fork"
                    android:contentDescription="@string/dining_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dining_icon"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/housing_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:scaleType="fitCenter"
                        android:src="@drawable/home"
                        android:contentDescription="@string/housing_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/housing_icon"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"/>
                </LinearLayout>

            <LinearLayout
                android:id="@+id/classroom_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/edit"
                    android:contentDescription="@string/booking_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="80dp"
                    android:text="@string/booking_icon"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/library_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/open_magazine"
                    android:contentDescription="@string/library_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="80dp"
                    android:text="@string/library_icon"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_services_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/like"
                    android:contentDescription="@string/student_services_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="80dp"
                    android:text="@string/student_services_icon"
                    android:textColor="@color/colorText"
                    android:gravity="center"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/building_services_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wrench"
                    android:contentDescription="@string/building_services_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="80dp"
                    android:text="@string/building_services_icon"
                    android:textColor="@color/colorText"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>